@@ -4,6 +4,11 @@ Changelog
 1.0b3 - unreleased
 ------------------
 
+- Adjusted viewlets so that plone.app.layout specifies the viewlet
+  configuration used by Sunburst, and this package now overrides those
+  to restore the old positions.
+  [davisagli]
+
 - Fix the uninstall profile to be executed and switch to Sunburst.
   Fixes http://dev.plone.org/plone/ticket/10346.
   [dukebody]
